// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaringLeaveQuestion renders inline error message when the text exceeds the limit 1`] = `
<div
  class="usa-form-group usa-form-group--error"
  data-testid="inaccurate_reason"
>
  <label
    class="usa-label text-bold usa-label--error font-heading-xs measure-5"
    for="relationshipInaccurateReason"
    id="relationshipInaccurateReason_label"
  >
    Tell us why you think this relationship is inaccurate.
  </label>
  <span
    class="usa-error-message measure-5"
    id="relationshipInaccurateReason_error"
    role="alert"
  >
    Please shorten your comment. We cannot accept comments that are longer than 9999 characters.
  </span>
  <textarea
    class="usa-textarea margin-top-3 usa-input--error"
    id="relationshipInaccurateReason"
    name="relationshipInaccurateReason"
  />
</div>
`;

exports[`CaringLeaveQuestion renders the alert info when user indicates the relationship status is unknown  1`] = `
<div
  class="usa-alert usa-alert--info measure-5 margin-y-3"
  role="region"
  tabindex="-1"
>
  <div
    class="usa-alert__body"
  >
    <div
      class="usa-alert__text"
    >
      If you have not confirmed the accuracy of the family relationship the employee has attested to, please note that the Department of Family and Medical leave will adjudicate based on the attestation the employee made when submitting their application.
    </div>
  </div>
</div>
`;

exports[`CaringLeaveQuestion renders the comment box and the alert when user indicates the relationship is inaccurate  1`] = `
<div
  aria-labelledby="alert-heading13"
  class="usa-alert usa-alert--warning measure-5 margin-y-3"
  role="region"
  tabindex="-1"
>
  <div
    class="usa-alert__body"
  >
    <h2
      class="usa-alert__heading font-heading-sm text-bold"
      id="alert-heading13"
    >
      The employee will be denied paid leave.
    </h2>
    <div
      class="usa-alert__text"
    >
      We take allegations about false relationships seriously. Choosing No may trigger a denial of the employee's application for paid leave. The employee has the right to appeal if their application is denied.
    </div>
  </div>
</div>
`;

exports[`CaringLeaveQuestion renders the component 1`] = `
<fieldset
  class="usa-fieldset margin-top-3 usa-form-group"
>
  <legend
    class="usa-label text-bold usa-legend font-heading-xs measure-5"
  >
    <div
      class="display-flex flex-align-end margin-top-6 margin-bottom-3"
    >
      <h2
        class="flex-fill margin-right-1 font-heading-md text-bold"
      >
        Do you believe the listed relationship is described accurately? (Optional)
      </h2>
    </div>
  </legend>
  <span
    class="display-block line-height-sans-5 measure-5 usa-hint text-base-darkest"
  >
    This employee has attested the family member relationship is 
    <a
      href="https://www.mass.gov/family-caring-leave-relationships"
      rel="noopener"
      target="_blank"
    >
      a covered relationship
    </a>
    . If something on the form seems incorrect, add a comment at the end of the page.
  </span>
  <div
    class=""
  >
    <div
      class="usa-radio measure-5 bg-transparent"
    >
      <input
        class="usa-radio__input"
        id="InputChoice1"
        name="believeRelationshipAccurate"
        type="radio"
        value="Yes"
      />
      <label
        class="usa-radio__label"
        for="InputChoice1"
      >
        Yes
      </label>
    </div>
    <div
      class="usa-radio measure-5 bg-transparent"
    >
      <input
        class="usa-radio__input"
        id="InputChoice2"
        name="believeRelationshipAccurate"
        type="radio"
        value="Unknown"
      />
      <label
        class="usa-radio__label"
        for="InputChoice2"
      >
        I don't know
      </label>
    </div>
    <div
      class="usa-radio measure-5 bg-transparent"
    >
      <input
        class="usa-radio__input"
        id="InputChoice3"
        name="believeRelationshipAccurate"
        type="radio"
        value="No"
      />
      <label
        class="usa-radio__label"
        for="InputChoice3"
      >
        No (comment required)
      </label>
    </div>
  </div>
</fieldset>
`;
